tests/compile/scope_userdata_borrow.stderr
error[E0599]: no method named `scope` found for struct `Lua` in the current scope
  --> tests/compile/scope_userdata_borrow.rs:11:9
   |
11 |     lua.scope(|scope| {
   |     ----^^^^^ method not found in `Lua`
